fixed incorrect imports in pom.xml